#2837 - Fix spacing issue of life-app form value

--- a/src/main/webapp/resources/css/savie-styles.css
+++ b/src/main/webapp/resources/css/savie-styles.css
@@ -574,7 +574,7 @@ a:hover {
   font-size: 18px;
   color: #000000;
   height: 44px;
-  padding: 3px 16px !important;
+  padding: 3px 15px !important;
   cursor: pointer;
   margin-top: 10px;
 }
